--- a/new.html
+++ b/new.html
@@ -1,1 +1,8 @@
-#newproject
+<Doctype!>
+<html>
+<head>
+<t>social networking</t>
+</head>
+
+<body><a href="https://www.google.com">click here</a></body>
+</html>
