--- a/Assignment1/main.html
+++ b/Assignment1/main.html
@@ -9,6 +9,7 @@
     <title>baby world</title>
     <link rel="icon" href="image/title.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Pacifico|Playball" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/960gs/0/960.min.css">
     <link rel="stylesheet" href="stylei.css" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style2.css" />
