--- a/Assignment1/main.html
+++ b/Assignment1/main.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width , initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>baby world</title>
-    <link rel="icon" href="image/title.ico" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css?family=Pacifico|Playball" rel="stylesheet">
+    <link rel="icon" href="https://1.bp.blogspot.com/-rbyZKnvlph4/V616I98bBtI/AAAAAAAANCg/F0297akf_gwTsUZ4-pS60rJ_6eYwUbmZQCLcB/s400/a-lovely-baby-listening-songs-funky-baby-walls.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/960gs/0/960.min.css">
+    <link href="https://fonts.googleapis.com/css?family=UnifrakturCook:700" rel="stylesheet">
     <link rel="stylesheet" href="stylei.css" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style2.css" />
@@ -107,7 +108,7 @@
                 <p><a href="#">Terms of Use</a> / <a href="#">Privacy Policy</a></p>
             </section>
             <section class="grid_3 social">
-                <span><i  class="fa fa-facebook-official fa-2x" aria-hidden="true" ></i></span>
+                <span><i class="fa fa-facebook-official fa-2x" aria-hidden="true" ></i></span>
                 <span><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></span>
                 <span><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></span>
                 <span><i class="fa fa-google-plus-square fa-2x" aria-hidden="true"></i></span>
