--- a/Assignment1/main.html
+++ b/Assignment1/main.html
@@ -49,11 +49,14 @@
         </section>
 
         
-        <article class="grid_12 fir" style='background-image:url(http://www.landmarkgroup.com/images/take-a-tour/babyshop/large/03-Carousal-at-babyshop.jpg); background-size: 940px 400px;'>
+        <article class="grid_12 " style='background-image:url(http://www.landmarkgroup.com/images/take-a-tour/babyshop/large/03-Carousal-at-babyshop.jpg); background-size: 940px 400px;'>
          <a href="http://www.babymartonline.com/en/"></a>
         </article>
         <!-- 2 column section-->
-        <section class="grid_6 ">
+
+
+
+        <section class="grid_6 fir">
             <a href="http://www.babymartonline.com/en/"></a>
             <figure>
         <img src="http://3.bp.blogspot.com/-c8-z4DnTJzg/TWAIg6nNYJI/AAAAAAAAAOM/BidtoZNGz8U/s1600/106.jpg" width="400" height="800" alt="Baby image"/>
@@ -64,7 +67,7 @@
 
 
 
-        <section class="grid_6" sec >
+        <section class="grid_6 sec">
 
 
         <div class="grid_6">
@@ -80,7 +83,7 @@
 
 
             <div class="grid_6" >
-            <a href="http://www.clipartkid.com/images/686/cartoon-baby-toys-clip-art-digital-clip-art-by-brunostore-r9WDh0-clipart.jpeg"><h3>Toys</h3></a>
+            <a href="http://www.clipartkid.com/images/686/cartoon-baby-toys-clip-art-digital-clip-art-by-brunostore-r9WDh0-clipart.jpeg"><h2>Toys</h2></a>
             <figure>
         <img src="https://s-media-cache-ak0.pinimg.com/originals/c9/a8/2a/c9a82a6405bdd02da192083569c00021.jpg" width="400" height="200" alt="Baby toys image"/>
 
