--- a/index.html
+++ b/index.html
@@ -39,26 +39,24 @@
                 <img src="image/hero.png" width="940" height="400" alt="cover photo"/>    
         </section>
         <!--3 column section-->
+        <section class="grid_12 three_head">
+            <div class="grid_4 three">
+                <h2>Bags</h2>
+                    <img src="image/three1.png" width="280" height="200" alt="Carry the things easily"/>
+            </div>
 
-        <section class="grid_4 three">
-            <h2>Bags</h2>
-                <img src="image/three1.png" width="300" height="200" alt="Carry the things easily"/>
+            <div class="grid_4 three">
+                <h2>Shoes</h2>
+                    <img src="image/three2.png" width="280" height="200" alt="Comfy little hole"/>
+            </div>
+
+            <div class="grid_3 three">
+                <h2>Cosmetics</h2>
+                    <img src="image/three3.png" width="280" height="200" alt="Adding additional beauty"/>
+            </div>
         </section>
-
-        <section class="grid_4 three">
-            <h2>Shoes</h2>
-                <img src="image/three2.png" width="300" height="200" alt="Comfy little hole"/>
-        </section>
-
-        <section class="grid_4 three">
-            <h2>Cosmetics</h2>
-                <img src="image/three3.png" width="300" height="200" alt="Adding additional beauty"/>
-        </section>
-
-     
+   
         <!-- 2 column section-->
-
-
 
         <section class="grid_6 single">
             <a href="http://www.babymartonline.com/en/"></a>
@@ -107,7 +105,7 @@
                 <a href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ2AavStmZKA9VGfkP3uaQeTgEoVx0XfxMdBT4FoJIUvoSy7Aw0"></a>
                     <figure>
                         <h2>Skin Care</h2>
-                            <img src="image/divide3.png" width="350" height="250" alt="baby skincare image"/>
+                            <img src="image/divide3.png" width="350" height="250" alt="baby skincare imag"/>
 
                                 <figcaption>
                                     <p>Children's skin is more vulnerable to climate and infections.Use our skin lotions to protect your children's skin </p>
@@ -121,7 +119,7 @@
       
         <footer class="grid_12">
             <section class="grid_4 copy">
-                    <h6>Copyrights &copy; 2017 All Rights Reserved.</h6>
+                <h6>Copyrights &copy; 2017 All Rights Reserved.</h6>
             </section>
             <section class="grid_3 term">
                 <h6><a href="#">Terms of Use</a> / <a href="#">Privacy Policy</a></h6>
