--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
             <section class="grid_3 term">
                 <h6><a href="#">Terms of Use</a> / <a href="#">Privacy Policy</a></h6>
             </section>
-            <div class="grid_3 social">
+            <section class="grid_3 social">
+                <h6>Contact Us</h6>
                 <span> <a href="https://www.facebook.com/" class="fa fa-facebook-official fa-2x" aria-hidden="true" ></a>
                 </span>
                 <span><a href="https://twitter.com/Twitter" class="fa fa-twitter-square fa-2x" aria-hidden="true"></a>
@@ -135,7 +136,7 @@
                 </span>
                 <span><a href="https://www.youtube.com/account" class="fa fa-youtube-square fa-2x" aria-hidden="true"></a>
                 </span>
-            </div>
+            </section>
         </footer>
     </div>
 </body>
